Fixed logo issues on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -244,7 +244,7 @@ h2 {
 }
 
 .sdk-logo {
-  height: 5rem;
+  height: auto;
   width: 5rem;
 }
 
